# rusted-torch-sample

./: .gitignore  Cargo.toml  LICENSE  README.md
models/: classification.py  requirements.txt
src/: main.rs
